# memory-server

./: .gitignore  Cargo.toml  Entitlements.plist  README.md  build.bat  build.rs  build.sh  pointerscan.py  sample.py  watch.bat  watch.sh
.cargo/: config
.github/workflows/: main.yml
backend/: .gitignore  Cargo.toml  build.bat  build.rs  build.sh
backend/src/: .clang-format  allocator.rs  api.rs  lib.rs  logger.rs  main.rs  native_bridge.rs  pointerscan.rs  ptrscan.rs  request.rs  serve.rs  util.rs
backend/src/cpp/src/: native_darwin.cpp  native_darwin.mm  native_linux.cpp  native_windows.cpp
backend/src/cpp/src/common/: util.cpp  util.h
backend/src/cpp/src/darwin/: debugger.h  debugger.mm  file_api.h  file_api.mm  native_api.h  native_api.mm
backend/src/cpp/src/linux/: file_api.cpp  file_api.h  native_api.cpp  native_api.h
backend/src/cpp/src/windows/: debugger.cpp  debugger.h  file_api.cpp  file_api.h  native_api.cpp  native_api.h
frontend/: build.sh  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  setting.tsx
frontend/src/components/: bookmark.tsx  fileexplorer.tsx  footer.tsx  global-store.tsx  header.tsx  icon.tsx  information.tsx  memoryview.tsx  modules.tsx  regions.tsx  scanner.tsx  setting.tsx  tabbar.tsx  toppage.tsx
frontend/src/components/Bookmark/: index.tsx  (+1 more)
frontend/src/lib/: api.ts  converter.ts  global-store.tsx  utils.ts
src/: api.rs  main.rs  util.rs
src/cpp/src/: native_darwin.cpp  native_ios.cpp  native_linux.cpp  native_windows.cpp
(+30 files in other folders)
