[package]
name = "memory-server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
lazy_static = "1.4"
serde = {version="1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.14"
aho-corasick = "0.7"
tide = "0.16"
async-std = "1.10"
regex = "1.8.4"
hex = "0.4.3"