[package]
name = "memory-server"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
rayon = "1.5.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
lazy_static = "1.4"
serde = {version="1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.14"
aho-corasick = "0.7"
tide = "0.16"
async-std = "1.10"
regex = "1.8.4"
hex = "0.4.3"
byteorder = "1.4.3"
include_dir = "0.6"
mime_guess = "2.0"
memchr = "2.7.2"
ctor = "0.2.6"
lz4 = "1.24.0"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
percent-encoding = "2.3.1"

[[bin]]
name = "memory-server"
path = "src/main.rs"

[lib]
crate-type = ["cdylib"]